fix minor layout issue

--- a/_scss/_header.scss
+++ b/_scss/_header.scss
@@ -10,6 +10,10 @@ header {
         padding: 0;
         margin: 0;
         list-style: none;
+
+        a {
+            float: left;
+        }
     }
       
     a, span {
